k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcirtap
  labels:
    app.kubernetes.io/name: kcirtap-site
