k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcirtap-site
  namespace: kcirtap
  labels:
    app.kubernetes.io/name: kcirtap-site
    app.kubernetes.io/component: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kcirtap-site
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kcirtap-site
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: site
          image: ghcr.io/kcirtapfromspace/kcirtap-blog:bfccff6
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
