k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kcirtap-site
  namespace: kcirtap
  labels:
    app.kubernetes.io/name: kcirtap-site
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: kcirtap-site
